# mcp-servicenow

./: .env.example  .gitignore  .mcp.json.example  LICENSE  README.md  SKILL.md  pyproject.toml  server.py  sn_instances.json.example
commands/: promote.md
community/: EXPORT-INSTRUCTIONS.md  blog-post.md  create_update_set.js  populate_update_set.js  share-description.md  sys_remote_update_set_63801882935fb214dd4f32cdfaba10be.xml  sys_remote_update_set_f6dc1c4693dfb214dd4f32cdfaba10f4.xml
widgets/create_category_or_subcategory/: client_script.js  css.css  server_script.js  template.html
